<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.may6soft.notepad.MainActivity">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/action_edit"
        app:showAsAction="always"/>

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="always"/>

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_menu_btn_add"
        android:title="@string/action_add"
        app:showAsAction="always"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_menu_info_details"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"/>

</menu>
